Fix clickable area on main panel collapsed

--- a/view/layout/index.css
+++ b/view/layout/index.css
@@ -45,6 +45,11 @@
     bottom: 0;
     left: 0;
     z-index: 10;
+    transition: transform 150ms;
+
+    @nest body.is-main-collapsed & {
+      transform: translateY(287px);
+    }
   }
 }
 
